--- a/SaneEconomyCore/src/main/resources/plugin.yml
+++ b/SaneEconomyCore/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: SaneEconomy
+name: ${artifactId}
+main: ${plugin.package}.${artifactId}
+version: ${project.version}
 author: AppleDash
-main: org.appledash.saneeconomy.SaneEconomy
-version: 0.12.7
 load: STARTUP
 softdepend: [Vault]
 commands:
