--- a/SaneEconomyMobKills/src/main/resources/plugin.yml
+++ b/SaneEconomyMobKills/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: SaneEconomyMobKills
+name: ${artifactId}
+main: ${plugin.package}.${artifactId}
+version: ${project.version}
 description: A plugin to give players experience when they kill mobs.
-version: 0.1.1
 author: AppleDash
-main: org.appledash.saneeconomymobkills.SaneEconomyMobKills
 depend: [SaneEconomy]
