--- a/SaneEconomySignShop/src/main/resources/config.yml
+++ b/SaneEconomySignShop/src/main/resources/config.yml
@@ -1,3 +1,8 @@
+#
+# ---------------------------
+#   ${artifactId} v${project.version}
+# ---------------------------
+#
 admin-shop-trigger: '[Shop]'
 admin-shop-title: '&8[&6Shop&8]&r'
 chat:
