--- a/SaneEconomySignShop/src/main/resources/plugin.yml
+++ b/SaneEconomySignShop/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: SaneEconomySignShop
-main: org.appledash.saneeconomysignshop.SaneEconomySignShop
+name: ${artifactId}
+main: ${plugin.package}.${artifactId}
+version: ${project.version}
 author: AppleDash
-version: 0.1.5
 depend: [SaneEconomy]
